Adding rough admin endpoints to retrieve tags and fields

--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,7 @@ dependencies {
     compile 'com.github.tomakehurst:wiremock:2.18.0',
             'org.mongodb:mongodb-driver-async:3.6.3',
             'org.mongodb:mongo-java-driver:3.6.3',
-            'ch.qos.logback:logback-classic:1.0.9'
-
-    testCompile 'com.squareup.okhttp3:okhttp:3.10.0'
+            'ch.qos.logback:logback-classic:1.0.9',
+            'com.squareup.okhttp3:okhttp:3.10.0'
 
 }
