Refactoring for better testability. Fixing a couple of bugs
 * Nullpointer when viewing store if no post serve actions are defined on a stubbing
 * If more than one stub has the same tag got a merge error when building map of store to tag to fields.

--- a/build.gradle
+++ b/build.gradle
@@ -19,4 +19,5 @@ dependencies {
             'com.squareup.okhttp3:okhttp:3.10.0',
             "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.4.0"
 
+    testCompile 'org.assertj:assertj-core:3.10.0'
 }
