--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,5 +13,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "homepage" : "/__admin/store"
+
 }
