--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,21 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.4'
+    }
+}
+
+
+apply plugin: 'java'
+apply plugin: 'application'
+mainClassName = 'uk.co.optimisticpanda.wmrs.Server'
+apply plugin: 'com.github.johnrengelman.plugin-shadow'
+
 group 'uk.co.optimisticpanda'
 version '1.0-SNAPSHOT'
 
-apply plugin: 'java'
 
 sourceCompatibility = 1.8
 
