--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "npm": "^6.3.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
@@ -14,6 +15,5 @@
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:8080",
-  "homepage" : "/__admin/store"
-
+  "homepage": "/__admin/store"
 }
